[tool.poetry]
name = "2021-hba-u-net"
version = "0.1.0"
description = ""
authors = ["ricoms <5393732+ricoms@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
scikit-image = "^0.22.0"
scipy = "^1.11.3"
numpy = "^1.26.1"
seaborn = "^0.13.0"
tensorflow = "^2.14.0"
matplotlib = "^3.8.0"
keras = "^2.14.0"
opencv-python = "^4.8.1.78"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
